--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # Get this from Google AI Studio
-GEMINI_API_KEY=AIzaSyChVfj03iEa3tSnF2ve4_8qGY95engc6kI
+GEMINI_API_KEY="AIzaSyCt0sBMFmE0lVTj4-ioCmTBTexxnbs-Dcw"
 # Local MongoDB or Atlas URI
 MONGO_URI=mongodb://localhost:27017/ai_checker_db
