--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-flask==3.0.0
-flask-cors==4.0.0
-pymongo==4.6.0
-python-dotenv==1.0.0
-google-genai==0.3.0
+Flask
+flask-cors
+pymongo
+python-dotenv
+google-generativeai
