--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 # Get this from Google AI Studio
-GEMINI_API_KEY="AIzaSyDqD8uHVJTXItMpncjyksA0NCzNHsvZEbM"
+GEMINI_API_KEY="Place your own key"
 # Local MongoDB or Atlas URI
 MONGO_URI=mongodb://localhost:27017/ai_checker_db
